fixed issue in tag spacing for firefox browser

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -277,7 +277,6 @@
     .tag_button_collection {
       position: relative;
       cursor: pointer;
-      white-space: nowrap;
       margin-left: 15em;
       margin-top: 5px;
       height: 20px;
